fix: correct security authorization rules